--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://koffisonv.github.io/portfolio2",
+  "homepage": "https://koffisonv.github.io/portfolio",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
