--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
-    "next": "15.1.7",
+    "framer-motion": "^11.0.8",
+    "next": "^15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.5.0",
-    "framer-motion": "^11.0.8"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,9 +26,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "gh-pages": "^5.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "gh-pages": "^5.0.0"
+    "typescript": "^5"
   }
 }
